<resources>
    <string name="app_name">SwapnoBloodDonationApplication</string>
    <string name="action_settings">Settings</string>
    <string name="search_donor">Search Donor</string>
    <string name="search">Search</string>
    <string name="add_donor">ADD DONOR</string>
    <string name="address">Address</string>
    <string name="blood_group">Blood Group :</string>
    <string name="district">District :</string>
    <string name="enter_person_name">Enter Person Name</string>
    <string name="female">Female</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="string_male" />
    <string name="name">Name :</string>
    <string name="phone_no">Phone No :</string>
    <string name="previous_experience">Previous Experience :</string>
    <string name="submit">SUBMIT</string>
    <string name="username">USERNAME</string>
    <string name="enter_your_password">Enter Your Password :</string>
    <string name="enter_your_user_name">Enter your User Name :</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register_home">REGISTER</string>
    <string name="add_date">ADD DATE </string>
    <string name="settings">Settings</string>
    <string name="search_menu">Search</string>
    <string name="enter_your_password_forget">Enter Your Password :</string>
    <string name="enter_your_user_name_forget_password">Enter your User Name :</string>
    <string name="forget_password_header">FORGET PASSWORD</string>
</resources>
